--- a/robinhood-scroll.user.css
+++ b/robinhood-scroll.user.css
@@ -1,10 +1,10 @@
 /* ==UserStyle==
 @name           Robinhood Scroll
 @namespace      https://github.com/Lithovox
-@version        1.0.0
+@version        1.0.1
 @description    Adds a scrollbar to Robinhood's sidebar
 @author         Lithovox
-@homepageURL    https://github.com/Lithovox
+@homepageURL    https://github.com/Lithovox/Robinhood-Scroll/
 @license        Unlicense
 ==/UserStyle== */
 
